--- a/public/main.css
+++ b/public/main.css
@@ -1,53 +1,15 @@
-.timer-title {
-    font-family: helvetica;
-    font-weight: 100;
-    font-size: 25px;
-    margin: 0;
-    padding: 0;
-}
-.timer-label {
-    margin: 0;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 0;
-    font-family: helvetica;
-    font-weight: 100;
-    font-size: 60px;
-}
-.timer-container {
-    margin: 10px;
-}
-.timer-button {
-    margin-right: 5px;
-    background-color: white;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 5px;
-    font-size: 15px;
-    color: #fff;
-    background-color: #ccc;
-    padding: 10px;
-}
 body {
     background-color: #fff;
-    width: 100%;
-    height: 100;
     overflow: hidden;
     -webkit-app-region: drag;
-    -webkit-user-select: none;  /* Chrome all / Safari all */
-    -moz-user-select: none;     /* Firefox all */
-    -ms-user-select: none;      /* IE 10+ */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 }
 html {
     -webkit-app-region: drag;
     background: #fff;
-    width: 185px;
-    height: 185px;
-}
-:focus {
-  outline-color: transparent;
-  outline-style: none;
 }
 @media (min-width: 200px) {
   html {
