--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,34 @@
+@import '~antd/dist/antd.css';
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", SimSun, sans-serif;
+}
+
+/*.gutter-box {
+  padding: 5px 0;
+}*/
+.timer-container {
+    margin: 10px;
+    overflow: hidden;
+}
+.timer-title {
+    font-size: 20px;
+    /*height: 20px;*/
+    font-weight: 300;
+}
+.timer-label {
+    font-size: 50px;
+}
+.timer-slider {
+    -webkit-app-region: no-drag;
+}
+.ant-form-item {
+    margin-bottom: 0px;
+}
+select {
+    background-color: #fff;
+    width: 90px;
+    border-color: #d6d6d6;
 }
