--- a/public/main.css
+++ b/public/main.css
@@ -6,16 +6,22 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    width: 100%;
+    height: 100;
 }
 html {
     -webkit-app-region: drag;
     background: #fff;
+    width: 185px;
+    height: 150px;
 }
 @media (min-width: 200px) {
-  html {
-      border-color: black;
-      border-style: solid;
-      border-width: 1px;
-      border-radius: 5px;
-  }
+    html {
+        width: 185px !important;
+        height: 150px !important;
+        border-color: black;
+        border-style: solid;
+        border-width: 1px;
+        border-radius: 5px;
+    }
 }
