--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
 @import '~antd/dist/antd.css';
+@font-face {font-family: "anticon";
+  src: url('./fonts/iconfont.eot?t=1494480257283'); /* IE9*/
+  src: url('./fonts/iconfont.eot?t=1494480257283#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('./fonts/iconfont.woff?t=1494480257283') format('woff'), /* chrome, firefox */
+  url('./fonts/iconfont.ttf?t=1494480257283') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('./fonts/iconfont.svg?t=1494480257283#anticon') format('svg'); /* iOS 4.1- */
+}
 
 body {
   margin: 0;
@@ -24,8 +31,21 @@ body {
 .timer-slider {
     -webkit-app-region: no-drag;
 }
+.help-key {
+    font-size: 13px;
+    font-weight: bolder;
+    text-align: left;
+}
+
+button {
+    -webkit-app-region: no-drag;
+}
+.no-drag {
+    -webkit-app-region: no-drag;
+}
 .ant-form-item {
     margin-bottom: 0px;
+    -webkit-app-region: no-drag;
 }
 select {
     background-color: #fff;
